- Application sounds don't cut off when a new sound effect starts playing.
- Metronome honors application settings (muted and volume).
- Help UI works on all screens, not just the primary one.
- UI sound effects don't cut off anymore.
- Performance fixes for title in menu and 404 text.
- Resource view is properly resizable now.
- Old version detection turn off even if the user answers 'No' to changing
  the folder.

=================
Version 1.2.1.0
=================

New Features:
- JS-Style import statements for Modules implemented without defaultMember suport 
  for now.
- PlayerMediaPlayer supports a stop frame argument for play functions.
- PlayerMediaPlayer supports setting the volume of Resources via setVolume.
- PlayerMetronome supports setting the volume via setVolume.
- New window mode setting. The application can now be displayed in
  fullscreen, borderless or windowed mode.
- Code Editor & Help can be zoomed with CTRL+MWhl.

Changes:
- Resource Explorer View shows folder contents instead of the folder if a folder
  is selected in Tree View.
- Project Cards are rendered with a gloss effect.
- include method can include non-JSON-Formated scripts, which are evaled in the
  global scope.
- Resource Viewer in Editor shows timing info and preview for Movie and Sound
  type Resources.
- Resource Viewers only show relevant Resource types.
- Code snippet overlays are shown in the Code Editor instead of the entire Editor
  window.
- Changed UI to work reliably with mobile and extremely small resolutions.

Fixed Bugs:
- Flickering in Resource Explorer View was fixed.
- Early stopping of Resource preview load in Explorer View was fixed.
- Wheel scrolling of Project card selection fixed.
- When debugging a script, the player is not shown stacked on top of everything.
- Fixed some style bugs.
- Fixed a bug, where Scenes could not be resolved, and thus the Player could not
  start correctly due to different traversal of the SceneFlow.