@@ -12,3 +12,6 @@ add_subdirectory(physfs-3.0.2)
 add_subdirectory(SortFilterProxyModel)
 add_subdirectory(syntax-highlighting)
 add_subdirectory(xmldom)
+if(WIN32)
+  add_subdirectory(WinToast)
+endif()
